--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,15 @@ on:
        -main
 jobs:
   BP:
-    runs-on: 'node20'
+    runs-on: ubantu-latest
+    
     steps:
+    
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
       - name: Checkout branch
       #  uses: actions/checkout@main
      # - name: Run Branch Protection
