--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,16 @@ on:
        -main
 jobs:
   BP:
-    runs-on: ubantu-latest
+    runs-on: ubuntu-latest
     
     steps:
     
-      - uses: actions/checkout@v4
+     # - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - name: Checkout branch
-      #  uses: actions/checkout@main
-     # - name: Run Branch Protection
+      - name: Run Branch Protection
         uses: venh/branch-protection@v1.1.0
         with:
           token: '${{ secrets.token }}' 
