--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: "Create branch protection rule"
-on: create
+on: 
+ push:
+  branches:
+     - main
 
 jobs:
   test: # Test action's functionality
