--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   test: # Test action's functionality
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@main
     - uses: ./
       with: 
         PERSONAL-ACCESS-TOKEN: ${{ secrets.token }}
