--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: ./
       with: 
         PERSONAL-ACCESS-TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        BASE-BRANCH-PATTERN: '^feature\/[a-zA-Z0-9]+$'
+        BASE-BRANCH-PATTERN: 'main'
         REQUIRED-NUMBER-OF-REVIEWERS: 2
         REQUIRED-STATUS-CHECKS: 'build,test'
         REQUIRE-REVIEW-FROM-CODEOWNERS: 'true'
