--- a/.github/package.json
+++ b/.github/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "branch-guardian",
+  "name": "main",
   "version": "1.1.0",
   "private": false,
   "description": "TypeScript Action for automated branch rules creation/deletion",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/infamous-riddles/branch-guardian"
+    "url": "git+https://github.com/ManojKumar2133/github-actions-course-resources"
   },
   "keywords": [
     "actions",
