--- a/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
+++ b/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
@@ -1,1 +1,17 @@
 name: BuildTest
+on: workflow_dispatch
+jobs:
+  job:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        use: actions/checkout@v3
+      - name: Install Nodejs
+        use: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm test
