--- a/.github/workflows/secondprojectBuildTest.yml
+++ b/.github/workflows/secondprojectBuildTest.yml
@@ -12,7 +12,8 @@ jobs:
           node-version: '18'
       - name: Install Dependencies
         run: |
-           cd Code/02 Basics/02 Starting Project
+          pwd
+           cd "Code/02 Basics/02 Starting Project"
            npm ci
       - name: Run Tests
         run: npm test
