--- a/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
+++ b/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
@@ -1,14 +1,14 @@
-name: BuildTest
-on: push
+name: StartingProjectBuild&Test
+on: workflow_dispatch
 jobs:
   job:
-    name: Test
+    name: Build&Test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        use: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: Install Nodejs
-        use: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
       - name: Install Dependencies
