--- a/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
+++ b/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml
@@ -1,7 +1,7 @@
 name: StartingProjectBuild&Test
 on: workflow_dispatch
 jobs:
-  job:
+  Build:
     name: Build&Test
     runs-on: ubuntu-latest
     steps:
@@ -13,5 +13,29 @@ jobs:
           node-version: '18'
       - name: Install Dependencies
         run: npm ci
-      - name: Run Tests
-        run: npm test
+      - name: Build
+        run: npm run build
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Artifact  
+          path: ./dist
+          if-no-files-found: warn
+          retention-days: 3
+          compression-level: 5
+
+  Test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm ci
+      - name: Test
+        run: npm run test
+
