--- a/.github/workflows/secondprojectBuildTest.yml
+++ b/.github/workflows/secondprojectBuildTest.yml
@@ -1,19 +1,4 @@
-name: BuildTest
 on: workflow_dispatch
 jobs:
   job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get code
-        uses: actions/checkout@v3
-      - name: Install Nodejs
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-      - name: Install Dependencies
-        run: |
-          pwd
-           cd "Code/02 Basics/02 Starting Project"
-           npm ci
-      - name: Run Tests
-        run: npm test
+    uses: ManojKumar2133/github-actions-course-resources/Code/02 Basics/02 Starting Project/.github/workflows/Build-Test.yml@main
