--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '18'
       - name: Change Directory
-        run: cd github-actions-course-resources/github-actions-course-resources/Code/02 Basics/02 Starting Project
+        run: cd github-actions-course-resources/github-actions-course-resources/Code/"02 Basics"/"02 Starting Project"
       - name: Install Dependencies
         run: |
           pwd
@@ -41,7 +41,7 @@ jobs:
         with:
           node-version: '18'
       - name: Change Directory
-        run: cd github-actions-course-resources/github-actions-course-resources/Code/02 Basics/02 Starting Project
+        run: cd github-actions-course-resources/github-actions-course-resources/Code/"02 Basics"/"02 Starting Project"
       - name: Install Dependencies
         run: |
           pwd
