--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -6,8 +6,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      # - name: Checkout
+      #   uses: actions/checkout@v3
       - name: Install Nodejs
         uses: actions/setup-node@v3
         with:
